# Lorengine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
destination/: destination.gitignore.txt
lib/: Being.cpp  Being.h  Calendar.h  Day.h  Era.h  Item.h  Lore_Rand.h  Month.h  Organization.h  Plant.h  World.h  Year.h  all_includes.h
lib/beings/: Bipedal.h  Sentient.h
lib/beings/bipedals/humanoids/: Man.h
lib/history/: Being.h  Event.h  Item.h  Location.h  Organization.h  Plant.h  Title.h  all_history_includes.h
lib/history/beings/: Sentient.h
lib/history/beings/bipedals/: Humanoid.h
lib/history/beings/bipedals/humanoids/: Man.h
lib/history/helpers/: Physical_Attributes.h
lib/history/locations/: Biome.h  Building.h  Continent.h  District.h  Realm.h  Settlement.h
lib/history/organizations/: Culture.h  Family.h  Government.h  Guild.h  Ideology.h  Military.h  School.h
lib/history/organizations/governments/: Autocracy.h  Democracy.h  Oligarchy.h
lib/history/organizations/governments/autocracies/: Dictatorship.h  Monarchy.h
lib/history/organizations/governments/democracies/: Demarchy.h  Representocracy.h
lib/history/organizations/governments/oligarchies/: Aristocracy.h  Geniocracy.h  Stratocracy.h  Theocracy.h
lib/history/organizations/ideologies/: Religion.h
lib/history/organizations/ideologies/religions/: Monotheism.h  Polytheism.h
lib/history/organizations/schools/: Church.h
lib/history/src/: Being.cpp  Event.cpp  Item.cpp  Plant.cpp  Title.cpp
lib/organizations/: Family.h
lib/src/: Location.cpp  Organization.cpp
